Include angola-osm file to be in dockerignorefile

--- a/.dockerignore
+++ b/.dockerignore
@@ -18,3 +18,4 @@
 !ors-api/src/test/files/elevation/srtm_38_03.gh
 !ors-api/src/test/files/vrn_gtfs_cut.zip
 !ors-api/src/main/resources/ors-config-sample.json
+!ors-docker/files/angola-latest.osm.pbf 
