--- a/ors-config.env
+++ b/ors-config.env
@@ -71,7 +71,7 @@
 #ors.engine.elevation.cache_path=elevation_cache
 #ors.engine.profile_default.enabled=false
 #ors.engine.profile_default.graph_path=graphs
-ors.engine.profile_default.build.source_file=ors-api/src/test/files/heidelberg.test.pbf
+ors.engine.profile_default.build.source_file=ors-docker/files/angola-latest.osm.pbf
 #ors.engine.profile_default.build.elevation=true
 #ors.engine.profile_default.build.elevation_smoothing=false
 #ors.engine.profile_default.build.encoder_flags_size=8
