--- a/ors-config.yml
+++ b/ors-config.yml
@@ -6,7 +6,7 @@ ors:
   engine:
     profile_default:
       build:
-        source_file: ors-api/src/test/files/heidelberg.test.pbf
+        source_file: ors-docker/files/angola-latest.osm.pbf
     profiles:
       driving-car:
         enabled: true
